--- a/My project (1)/UserSettings/Search.settings
+++ b/My project (1)/UserSettings/Search.settings
@@ -13,6 +13,11 @@ scopes = {
 	"last_search.7E63D72B" = ""
 	"OpenInspectorPreview.7E63D72B" = "0"
 	"currentGroup.7E63D72B" = "all"
+	"picker_window_position_offset.74AD8FDB" = "903;401;320;550"
+	"picker_search_text.74AD8FDB" = "def "
+	"last_search.74AD8FDB" = "def "
+	"OpenInspectorPreview.74AD8FDB" = "0"
+	"currentGroup.74AD8FDB" = "all"
 }
 providers = {
 	find = {
